--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
-    "firebase": "^12.8.0"
+    "@tailwindcss/typography": "^0.5.19",
+    "firebase": "^12.8.0",
+    "marked": "^17.0.1"
   }
 }
